Creating core of the project with basic functionalities

--- a/LogAnalyzer/LogAnalyzer.csproj
+++ b/LogAnalyzer/LogAnalyzer.csproj
@@ -1,10 +1,17 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFramework>net9.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+	<PropertyGroup>
+		<OutputType>Exe</OutputType>
+		<TargetFramework>net9.0</TargetFramework>
+		<Nullable>enable</Nullable>
+		<AssemblyName>LogAnalyzer</AssemblyName>
+		<RootNamespace>LogAnalyzer</RootNamespace>
+	</PropertyGroup>
+
+	<ItemGroup>
+		<None Update="sample-logs\**">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
+	</ItemGroup>
 
 </Project>
